--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <title>Document</title>
 </head>
-<body>
+<body class="container-fluid">
 
     <header>
         <div class="titulo">Macarena Vallaro Estudio</div>
@@ -59,17 +59,16 @@
 
     <section>
         <article class="carrusel">
-
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="/img/Portada1.jpeg" class="d-block w-40 mx-auto" alt="portada1">
+                    <img src="/img/Portada1.jpeg" class="d-block w-20 mx-auto" alt="portada1">
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                    <img src="/img/Portada2.jpeg" class="d-block w-40 mx-auto" alt="portada2">
+                    <img src="/img/Portada2.jpeg" class="d-block w-20 mx-auto" alt="portada2">
                     </div>
                     <div class="carousel-item">
-                    <img src="/img/Portada3.jpeg" class="d-block w-40 mx-auto" alt="portada3">
+                    <img src="/img/Portada3.jpeg" class="d-block w-20 mx-auto" alt="portada3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -83,15 +82,57 @@
             </div>
 
         </article>
+    
+        <!-- tarjetas -->
+
+        <article class="tarjeta">
+            <div class="row">
+                <div class="row row-cols-1 row-cols-md-2 g-4">
+                    <div class="col">
+                        <div class="card">
+                        <img src="/img/Clasico1.jpeg" class="card-img-top" alt="maquillaje-clasico">
+                        <div class="card-body">
+                            <h5 class="card-title">Maquillaje Clásico</h5>
+                            <p class="card-text">Es un estilo de maquillaje que se basa en utilizar colores neutros, de forma que una vez ha sido aplicado apenas se nota su presencia en el rostro...</p>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                        <img src="/img/SmokeyEyes1.jpeg" class="card-img-top" alt="Esfumado">
+                        <div class="card-body">
+                            <h5 class="card-title">Smokey Eyes</h5>
+                            <p class="card-text">Es una técnica que tiene por objetivo potenciar la mirada, haciendo que los ojos obtengan un look ahumado y penetrante...</p>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                        <img src="/img/Artistico1.jpeg" class="card-img-top" alt="Artistico">
+                        <div class="card-body">
+                            <h5 class="card-title">Artistico</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                        <img src="/img/CutCrease2.jpeg" class="card-img-top" alt="CutCrease">
+                        <div class="card-body">
+                            <h5 class="card-title">Cut Crease</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        </div>
+                    </div>
+                    </div>
+            </div>
 
 
 
 
 
 
-
-
-
+        </article>
 
 
     </section>
