--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <article class="tarjeta">
             <div class="row">
-                <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-12">
                     <div class="col">
                         <div class="card">
                         <img src="/img/Clasico1.jpeg" class="card-img-top" alt="maquillaje-clasico">
@@ -111,7 +111,7 @@
                         <img src="/img/Artistico1.jpeg" class="card-img-top" alt="Artistico">
                         <div class="card-body">
                             <h5 class="card-title">Artistico</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
                         </div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                         <img src="/img/CutCrease2.jpeg" class="card-img-top" alt="CutCrease">
                         <div class="card-body">
                             <h5 class="card-title">Cut Crease</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
                         </div>
                         </div>
                     </div>
