--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
                 <a class="nav-link active" aria-current="page" href="pages/sobre_mi.html">Sobre Mi</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                <a class="nav-link" href="pages/contacto.html">Contacto</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Laburos
+                Trabajos
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="/pages/maquillaje_social.html">Maquillaje Social</a></li>
-                <li><a class="dropdown-item" href="pages/auto_maquillaje.html">Auto Maquillaje</a></li>
+                <li><a class="dropdown-item" href="/pages/automaquillaje.html">Auto Maquillaje</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Cursos</a></li>
                 </ul>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pages/redes.html">Redes</a>
+                <a class="nav-link" href="pages/redes.html">Redes</a>
             </li>
             </ul>
             <form class="d-flex" role="search">
