--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 Trabajos
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/pages/maquillaje_social.html">Maquillaje Social</a></li>
-                <li><a class="dropdown-item" href="/pages/automaquillaje.html">Auto Maquillaje</a></li>
+                <li><a class="dropdown-item" href="pages/maquillaje_social.html">Maquillaje Social</a></li>
+                <li><a class="dropdown-item" href="pages/automaquillaje.html">Auto Maquillaje</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Cursos</a></li>
                 </ul>
