--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -62,7 +62,7 @@
             <p>¿Tienes alguna consulta?</p>
             <p>¿Estas pensando en reservar o regalar una sesion de maquillaje profesional?</p>
                 
-            <p>¡No dudes en contactarte con nosotros por cualquier motivo!</p>
+            <p>¡Estaré encantada de responderte!</p>
                 
             <p>Contamos con correo electrónico, llamadas, mensaje de texto y/o Whatsapp o simplemente complete el formulario a continuación y presione "enviar"</p>
         </article>
