--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-12">
                     <div class="col">
-                        <div class="card">
+                        <div class="card mt-2">
                         <img src="img/Clasico1.jpeg" class="card-img-top" alt="maquillaje-clasico">
                         <div class="card-body">
                             <h5 class="card-title">Maquillaje Clásico</h5>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card mt-2">
                         <img src="img/SmokeyEyes1.jpeg" class="card-img-top" alt="Esfumado">
                         <div class="card-body">
                             <h5 class="card-title">Smokey Eyes</h5>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card mt-2">
                         <img src="img/Artistico1.jpeg" class="card-img-top" alt="Artistico">
                         <div class="card-body">
                             <h5 class="card-title">Artistico</h5>
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card mt-2">
                         <img src="img/CutCrease2.jpeg" class="card-img-top" alt="CutCrease">
                         <div class="card-body">
                             <h5 class="card-title">Cut Crease</h5>
