--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a class="dropdown-item" href="pages/maquillaje_social.html">Maquillaje Social</a></li>
                 <li><a class="dropdown-item" href="pages/automaquillaje.html">Auto Maquillaje</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Cursos</a></li>
+                <li><a class="dropdown-item" href="pages/curso.html">Cursos</a></li>
                 </ul>
             </li>
             <li class="nav-item">
