--- a/pages/maquillaje_social.html
+++ b/pages/maquillaje_social.html
@@ -36,7 +36,7 @@
                     <li><a class="dropdown-item" href="maquillaje_social.html">Maquillaje Social</a></li>
                     <li><a class="dropdown-item" href="automaquillaje.html">Auto Maquillaje</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Cursos</a></li>
+                    <li><a class="dropdown-item" href="curso.html">Cursos</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
