--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <!-- css -->
     <link rel="stylesheet" href="css/estilo.css">
     <title>Document</title>
+    <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
 </head>
 <body class="container-fluid">
 
     <header>
-        <div class="titulo">Macarena Vallaro Estudio</div>
+        <h1>Macarena Vallaro Estudio</h1>
         <!-- navbar -->
 
     <nav class="navbar navbar-expand-lg bg-light">
@@ -93,7 +94,7 @@
                         <img src="img/Clasico1.jpeg" class="card-img-top" alt="maquillaje-clasico">
                         <div class="card-body">
                             <h5 class="card-title">Maquillaje Clásico</h5>
-                            <p class="card-text">Es un estilo de maquillaje que se basa en utilizar colores neutros, de forma que una vez ha sido aplicado apenas se nota su presencia en el rostro...</p>
+                            <p class="card-text">El maquillaje clásico es un básico que nunca pasa de moda.</p>
                         </div>
                         </div>
                     </div>
@@ -102,7 +103,7 @@
                         <img src="img/SmokeyEyes1.jpeg" class="card-img-top" alt="Esfumado">
                         <div class="card-body">
                             <h5 class="card-title">Smokey Eyes</h5>
-                            <p class="card-text">Es una técnica que tiene por objetivo potenciar la mirada, haciendo que los ojos obtengan un look ahumado y penetrante...</p>
+                            <p class="card-text">Es una técnica ideal para usarla de día o de noche.</p>
                         </div>
                         </div>
                     </div>
@@ -111,7 +112,7 @@
                         <img src="img/Artistico1.jpeg" class="card-img-top" alt="Artistico">
                         <div class="card-body">
                             <h5 class="card-title">Artistico</h5>
-                            <p class="card-text">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
+                            <p class="card-text">Utilizado para producciones de fotos o videoclips.</p>
                         </div>
                         </div>
                     </div>
@@ -120,7 +121,7 @@
                         <img src="img/CutCrease2.jpeg" class="card-img-top" alt="CutCrease">
                         <div class="card-body">
                             <h5 class="card-title">Cut Crease</h5>
-                            <p class="card-text">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
+                            <p class="card-text">Utilizado en redes sociales para dar a conocer tus trabajos en base a cortes y colores.</p>
                         </div>
                         </div>
                     </div>
