--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,13 +9,12 @@
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
     <title>Document</title>
+    <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
 </head>
 
-<body>
-
-
+<body class="containerContact">
     <header>
-        <div class="titulo">Macarena Vallaro Estudio</div>
+        <h1>Macarena Vallaro Estudio</h1>
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
@@ -123,8 +122,6 @@
             </form>
         </article>
     </section>
-
-
 
 
     <footer>Todos los derechos reservados</footer>
