--- a/pages/maquillaje_social.html
+++ b/pages/maquillaje_social.html
@@ -9,10 +9,11 @@
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
     <title>Document</title>
+    <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
-        <div class="titulo">Macarena Vallaro Estudio</div>
+        <h1>Macarena Vallaro Estudio</h1>
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
