--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="maquillaje, facial , belleza , automaquillaje , pinceles , selfies">
+    <meta name="description" content="Consultanos por turnos, y cursos sobre maquillaje profesional, tanto para maquillar a otras personas, como tambien de automaquillaje. ¡Ingresa ahora!">
+    <title>Aprende todos los trucos para maquillar como una profesional</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="css/estilo.css">
-    <title>Document</title>
     <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
 </head>
 <body class="container-fluid">
@@ -127,8 +129,19 @@
                     </div>
                     </div>
             </div>
-
         </article>
+
+        <article>
+            <figure class="text-center">
+                <blockquote class="blockquote">
+                    <p>La creatividad es tu mejor habilidad de maquillaje, no tengas miedo de experimentar.</p>
+                </blockquote>
+                <figcaption class="blockquote-footer">
+                    Pat McGrath.<cite title="Source Title"></cite>
+                </figcaption>
+            </figure>        
+        <article>
+
 
 
     </section>
