--- a/pages/automaquillaje.html
+++ b/pages/automaquillaje.html
@@ -55,7 +55,9 @@
     </header>
 
     <section>
-        <article class="automaquillaje">Automaquillaje</article>
+        <h2>Automaquillaje</h2>
+
+        <h4>Consiste en poder maquillarte como una profesional sin ayuda. Por supuesto que, es el resultado de mucha práctica y autoconocimiento para saber qué estilos y maneras de aplicar el make-up, son las que más se adaptan a vos.</h4>
 
         <article class="carruselRetrato p-3">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -90,12 +92,6 @@
             </div>    
         </article>
     </section>
-
-
-
-
-
-
 
     <footer>Todos los derechos reservados</footer>
 
