--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -117,12 +117,11 @@
                 </div>
                 </div>
                 <div class="col-12">
-                <button class="btn btn-primary" type="submit">Submit form</button>
+                <button class="btn btn-primary" type="submit">Enviar formulario</button>
                 </div>
             </form>
         </article>
     </section>
-
 
     <footer>Todos los derechos reservados</footer>
 
