--- a/pages/maquillaje_social.html
+++ b/pages/maquillaje_social.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header id="header">
         <h1>Macarena Vallaro Estudio</h1>
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-light">
@@ -144,6 +144,7 @@
         </article>
     </section>
 
+    <h4><a href="#header">Ir al inicio</a></h4>
 
     <footer>Todos los derechos reservados</footer>
 
