--- a/pages/automaquillaje.html
+++ b/pages/automaquillaje.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Consultanos por turnos, y cursos sobre maquillaje profesional, tanto para maquillar a otras personas, como tambien de automaquillaje. ¡Ingresa ahora!">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>Document</title>
+    <title>Automaquillaje</title>
     <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
 </head>
 <body>
@@ -38,7 +39,7 @@
                     <li><a class="dropdown-item" href="maquillaje_social.html">Maquillaje Social</a></li>
                     <li><a class="dropdown-item" href="automaquillaje.html">Auto Maquillaje</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="curso.html">Cursos</a></li>
+                    <li><a class="dropdown-item" href="cursos.html">Cursos</a></li>
                     </ul>
                 </li>
                 </ul>
@@ -91,7 +92,6 @@
     </section>
 
     <footer>Todos los derechos reservados</footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
