--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="maquillaje, facial , belleza , automaquillaje , pinceles , selfies">
     <meta name="description" content="Consultanos por turnos, y cursos sobre maquillaje profesional, tanto para maquillar a otras personas, como tambien de automaquillaje. ¡Ingresa ahora!">
-    <title>Aprende todos los trucos para maquillar como una profesional</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="css/estilo.css">
+    <title>Aprende todos los trucos para maquillar como una profesional</title>
     <link rel="shortcut icon" href="img/favicon.jpg" type="image/x-icon">
 </head>
 <body class="container-fluid">
@@ -18,45 +18,49 @@
     <header>
         <h1>Macarena Vallaro Estudio</h1>
         <!-- navbar -->
-
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="pages/sobre_mi.html">Sobre Mi</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="pages/contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Trabajos
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="pages/maquillaje_social.html">Maquillaje Social</a></li>
-                <li><a class="dropdown-item" href="pages/automaquillaje.html">Auto Maquillaje</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="pages/curso.html">Cursos</a></li>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="pages/sobre_mi.html">Sobre Mi</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Trabajos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="pages/maquillaje_social.html">Maquillaje Social</a></li>
+                    <li><a class="dropdown-item" href="pages/automaquillaje.html">Auto Maquillaje</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="pages/cursos.html">Cursos</a></li>
+                    </ul>
+                </li>
                 </ul>
-            </li>
-            </ul>
-            <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
-        </div>
-    </nav>
-
+                <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+            </div>
+        </nav>    
     </header>
 
-    <!-- Portadas -->
+    <section>
 
+        <h4>En nuestro estudio sabemos que lo más importante es resaltar la belleza propia.</h4>
+        <h4>Por eso te brindamos diferentes servicios que se adapten a tu búsqueda, ademas te asesoramos de manera personalizada para que puedas lucirte en tu evento especial.</h4>
+
+    </section>
+
+    <!-- Portadas -->    
     <section>
         <article class="carrusel">
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
@@ -80,7 +84,6 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-
         </article>
     
         <!-- tarjetas -->
@@ -138,15 +141,9 @@
                 </figcaption>
             </figure>        
         <article>
-
-
-
     </section>
 
-
     <footer>Todos los derechos reservados</footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
