--- a/pages/maquillaje_social.html
+++ b/pages/maquillaje_social.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Consultanos por turnos, y cursos sobre maquillaje profesional, tanto para maquillar a otras personas, como tambien de automaquillaje. ¡Ingresa ahora!">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>Document</title>
+    <title>Maquillaje para eventos</title>
     <link rel="shortcut icon" href="../img/favicon.jpg" type="image/x-icon">
 </head>
 <body>
+
     <header id="header">
         <h1>Macarena Vallaro Estudio</h1>
+
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
@@ -37,7 +40,7 @@
                     <li><a class="dropdown-item" href="maquillaje_social.html">Maquillaje Social</a></li>
                     <li><a class="dropdown-item" href="automaquillaje.html">Auto Maquillaje</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="curso.html">Cursos</a></li>
+                    <li><a class="dropdown-item" href="cursos.html">Cursos</a></li>
                     </ul>
                 </li>
                 </ul>
@@ -47,7 +50,7 @@
                 </form>
             </div>
             </div>
-        </nav>
+        </nav>        
     </header>
 
     <!-- Secciones Maquillaje Social-->
